k8s/aws/aws-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-imagegallery-api
  namespace: imagegallery
spec:
  type: ClusterIP
  selector:
    app: imagegallery-api
  ports:
    - port: 5075
      targetPort: 5075

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-imagegallery-api
  namespace: imagegallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imagegallery-api
  template:
    metadata:
      labels:
        app: imagegallery-api
    spec:
      serviceAccountName: sa-imagegallery-api
      containers:
        - name: imagegallery-api
          image: 323146836950.dkr.ecr.us-east-2.amazonaws.com/imagegallery-api:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5075

          startupProbe:
            httpGet:
              path: /health/live
              port: 5075
            failureThreshold: 30
            periodSeconds: 2

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5075
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health/live
              port: 5075
            initialDelaySeconds: 15
            periodSeconds: 10
