k8s/aws/aws-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-imagegallery-client
  namespace: imagegallery
spec:
  type: ClusterIP
  selector:
    app: imagegallery-client
  ports:
    - port: 7184
      targetPort: 7184

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-imagegallery-client
  namespace: imagegallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imagegallery-client
  template:
    metadata:
      labels:
        app: imagegallery-client
    spec:      
      containers:
        - name: imagegallery-client
          image: 323146836950.dkr.ecr.us-east-2.amazonaws.com/imagegallery-client:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 7184
