k8s/aws/aws-idp.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-imagegallery-idp
  namespace: imagegallery
  labels:
    app: imagegallery-idp
spec:
  type: ClusterIP
  selector:
    app: imagegallery-idp
  ports:
    - port: 5001
      targetPort: 5001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-imagegallery-idp
  namespace: imagegallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imagegallery-idp
  template:
    metadata:
      labels:
        app: imagegallery-idp
    spec:
      containers:
        - name: imagegallery-idp
          image: 323146836950.dkr.ecr.us-east-2.amazonaws.com/imagegallery-idp:1.0
          imagePullPolicy: Always

          ports:
            - containerPort: 5001

          volumeMounts:
            - name: idp-keys
              mountPath: /app/keys
            - name: dp-keys
              mountPath: /home/app/.aspnet/DataProtection-Keys

          # ========================================
          # STARTUP PROBE
          # ========================================
          #startupProbe:
          #  httpGet:
          #    path: /idp/.well-known/openid-configuration
          #    port: 5001
          #  failureThreshold: 30
          #  periodSeconds: 2

          # ========================================
          # READINESS PROBE
          # ========================================
          #readinessProbe:
          #  httpGet:
          #    path: /idp/.well-known/openid-configuration
          #    port: 5001
          #  initialDelaySeconds: 5
          #  periodSeconds: 5
          #  timeoutSeconds: 3

          # ========================================
          # LIVENESS PROBE
          # ========================================
          #livenessProbe:
          #  httpGet:
          #    path: /idp/.well-known/openid-configuration
          #    port: 5001
          #  initialDelaySeconds: 15
          #  periodSeconds: 10

      # Pod-level volumes (NOT inside container)
      volumes:
        - name: idp-keys
          emptyDir: {}
        - name: dp-keys
          emptyDir: {}
